# mandelbrot-cpp

./: .gitignore  CMakeLists.txt  README.md  compile.txt  main.cpp
CPU/: main.go
GPU/: main.cpp  rect.frag  shader.frag  shader_util.cpp  shader_util.hpp  vertex_object.cpp  vertex_object.hpp
